Closed Bug 830451 Opened 13 years ago Closed 13 years ago

ICE stack should ignore rather than assert on PEER_REFLEXIVE

Categories

(Core :: WebRTC: Networking, defect, P2)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: ehugg, Assigned: ehugg)

Details

(Whiteboard: [webrtc][blocking-webrtc+][nICEr][nICEr-upstream-needed][qa-])

Attachments

(1 file)

PEER_REFLEXIVE should be treated the same as SERVER_REFLEXIVE, currently we throw an ASSERT.
Attachment #701915 - Flags: review?(ekr)
Comment on attachment 701915 [details] [diff] [review] Treat PEER_REFLEXIVE like SERVER_REFLEXIVE Review of attachment 701915 [details] [diff] [review]: ----------------------------------------------------------------- Since I suggested this change, let's let abr review it
Attachment #701915 - Flags: review?(ekr) → review?(adam)
Assignee: nobody → ethanhugg
Priority: -- → P2
Whiteboard: [webrtc][blocking-webrtc+]
Comment on attachment 701915 [details] [diff] [review] Treat PEER_REFLEXIVE like SERVER_REFLEXIVE Review of attachment 701915 [details] [diff] [review]: ----------------------------------------------------------------- This looks good to me. Sorry for taking so long to review it -- it took me a while to convince myself that this is correct per spec. The relevant text is in RFC 5245, section 7.1.3.2.1: "the peer reflexive candidate is not paired with other remote candidates."
Attachment #701915 - Flags: review?(adam) → review+
Whiteboard: [webrtc][blocking-webrtc+] → [webrtc][blocking-webrtc+][nICEr]
Whiteboard: [webrtc][blocking-webrtc+][nICEr] → [webrtc][blocking-webrtc+][nICEr][nICEr-upstream-needed]
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
Whiteboard: [webrtc][blocking-webrtc+][nICEr][nICEr-upstream-needed] → [webrtc][blocking-webrtc+][nICEr][nICEr-upstream-needed][qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: