Bug 830451 Treat PEER_REFLEXIVE like SERVER_REFLEXIVE r=adam